language/move-lang/tests/move_check/expansion/unbound_module_alias_in_type.exp
error[E03002]: unbound module
  ┌─ tests/move_check/expansion/unbound_module_alias_in_type.move:2:16
  │
2 │     fun foo(x: X::T) {}
  │                ^ Unbound module alias 'X'

